# profile.mobile.apps.native.video-player

./: .cproject  .project  .tproject  CMakeLists.txt  NOTICE  WORKSPACE  org.tizen.video-player-1.0.0-arm.tpk  org.tizen.video-player-1.0.0-i386.tpk  org.tizen.video-player.manifest  org.tizen.videos.efl  org.tizen.videos.manifest  org.tizen.videos.xml  project.config  project_def.prop  tizen-manifest.xml
common/: CMakeLists.txt
common/include/: vp-chapter-db.h  vp-debug.h  vp-file-util.h  vp-macro.h  vp-media-content-util.h  vp-pinch-zoom.h  vp-preview-db.h  vp-thumb-db.h  vp-util.h
common/src/: vp-chapter-db.c  vp-db-util.c  vp-file-util.c  vp-media-content-util.c  vp-pinch-zoom.c  vp-preview-db.c  vp-thumb-db.c  vp-util.c
common/src/include/: vp-db-common.h  vp-db-util.h
core/: CMakeLists.txt
core/include/: vp-drm.h
core/src/: vp-drm.c
core/src/include/: vp-core-common.h
feature/: CMakeLists.txt
feature/include/: vp-thumb-gen.h
feature/src/: vp-feature-util.c  vp-feature-util.h  vp-thumb-gen.c
include/: mp-video-log.h  mp-video-string-define.h  mp-video-type-define.h  mp-video-value-define.h  video-player.h
packaging/: load_pkgs.sh  org.tizen.video-player.spec  org.tizen.videos.spec
playview/: CMakeLists.txt
playview/include/: vp-play-log.h  vp-play-type-define.h  vp-play-view.h
playview/res/edc/playview/: pv-bookmark-item.edc  pv-bookmark.edc  pv-chapter-main-new.edc  pv-colorselector.edc  pv-custom-winset.edc  pv-minicontroller.edc  pv-multi-main.edc  pv-normal-control.edc  pv-normal-main.edc  pv-normal-top-control.edc  pv-popup.edc  pv-progressbar.edc  pv-resource.edc  pv-sensor-popup.edc  pv-speed-popup.edc  pv-subtitle-color-popup.edc  pv-tag-preview.edc  pv-trim-control.edc  pv-trim-item.edc  pv-trim-main.edc  pv-trim-top-control.edc  pv-volume-popup.edc  pv-volume.edc  pv-zoom-guide.edc
playview/res/edc/playview/custom/: pv-custom-button.edc  pv-custom-gengrid-item.edc  pv-custom-genlist-item.edc  pv-custom-layout.edc  pv-custom-naviframe.edc
playview/res/edje/: pv-brightness-popup.edc  pv-gesture.edc  pv-image.edc  pv-macro.edc  pv-minicontroller.edc  pv-normal-function.edc  pv-normal-main.edc  pv-popup.edc  pv-subtitle.edc  pv-tag-buddy.edc
playview/res/edje/custom/: pv-custom-button.edc  pv-custom-colorselector.edc  pv-custom-define.edc  pv-custom-image.edc  pv-custom-layout.edc
playview/src/: vp-play-view.c
playview/src/common/: vp-play-config.c  vp-play-preference.c  vp-play-ug.c  vp-play-util.c
playview/src/common/include/: vp-play-config.h  vp-play-preference.h  vp-play-ug.h  vp-play-util.h
playview/src/core/: vp-avrcp.c  vp-device-language.c  vp-device.c  vp-hollic.c  vp-image-util.c  vp-media-contents.c  vp-media-key.c  vp-mm-player.c  vp-multi-path.c  vp-sensor.c  vp-sound.c
playview/src/core/include/: vp-avrcp.h  vp-device-language.h  vp-device.h  vp-hollic.h  vp-image-util.h  vp-media-contents.h  vp-media-key.h  vp-mm-player.h  vp-multi-path.h  vp-sensor.h  vp-sound.h
playview/src/feature/: vp-audio-track.c  vp-capture.c  vp-detail.c  vp-play-speed.c  vp-repeat.c  vp-setting.c  vp-share.c  vp-sound-alive.c  vp-sound-path.c  vp-subtitle-alignment.c  vp-subtitle-bg-color.c  vp-subtitle-color.c  vp-subtitle-edge.c  vp-subtitle-font.c  vp-subtitle-select.c  vp-subtitle-size.c  vp-subtitle-sync.c  vp-subtitle-track.c  vp-subtitle.c  vp-zoom-guide.c
playview/src/feature/include/: vp-audio-track.h  vp-capture.h  vp-detail.h  vp-play-speed.h  vp-repeat.h  vp-setting.h  vp-share.h  vp-sound-alive.h  vp-sound-path.h  vp-subtitle-alignment.h  vp-subtitle-bg-color.h  vp-subtitle-color.h  vp-subtitle-edge.h  vp-subtitle-font.h  vp-subtitle-select.h  vp-subtitle-size.h  vp-subtitle-sync.h  vp-subtitle-track.h  vp-subtitle.h  vp-zoom-guide.h
playview/src/include/: vp-play-macro-define.h  vp-play-string-define.h  vp-play-value-define.h
playview/src/view/: vp-play-multi-view.c  vp-play-normal-view.c  vp-play-normal-view_bk.c
playview/src/view/include/: vp-play-multi-view.h  vp-play-normal-view.h  vp-play-normal-view_bk.h  vp-play-view-priv.h
playview/src/widget/: vp-play-bookmark.c  vp-play-brightness-popup.c  vp-play-button.c  vp-play-loading-ani.c  vp-play-popup.c  vp-play-progressbar.c  vp-play-subtitle.c  vp-play-volume-popup.c  vp-play-volume.c
playview/src/widget/include/: vp-play-bookmark.h  vp-play-brightness-popup.h  vp-play-button.h  vp-play-loading-ani.h  vp-play-more.h  vp-play-popup.h  vp-play-progressbar.h  vp-play-subtitle.h  vp-play-volume-popup.h  vp-play-volume.h
src/: video-player.c
video-downloader/: CMakeLists.txt
video-downloader/include/: VppDownload.h
video-downloader/src/: VppDownload.c
vp-main/: .cproject  .project  CMakeLists.txt  build_def.prop  org.tizen.video-player.efl  org.tizen.video-player.xml  project_def.prop  tizen-manifest.xml
vp-main/include/: vp-main.h
vp-main/include/serviceParser/: vp-service-parser.h
vp-main/playview/res/edje/: pv-bookmark-item.edj  pv-bookmark.edj  pv-brightness-popup.edj  pv-chapter-main-new.edj  pv-colorselector.edj  pv-custom-winset.edj  pv-gesture.edj  pv-image.edj  pv-macro.edj  pv-minicontroller.edj  pv-multi-main.edj  pv-normal-control.edj  pv-normal-function.edj  pv-normal-main.edj  pv-normal-top-control.edj  pv-popup.edj  pv-progressbar.edj  pv-resource.edj  pv-sensor-popup.edj  pv-speed-popup.edj  pv-subtitle-color-popup.edj  pv-subtitle.edj  pv-tag-buddy.edj  pv-tag-preview.edj  pv-trim-control.edj  pv-trim-item.edj  pv-trim-main.edj  pv-trim-top-control.edj  pv-volume-popup.edj  pv-volume.edj  pv-zoom-guide.edj
vp-main/playview/res/edje/custom/: pv-custom-define.edj  pv-custom-image.edj
vp-main/res/: edc  edje
vp-main/res/po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ro.po  (+11 more)
vp-main/src/: vp-main.c
vp-main/src/serviceParser/: vp-service-parser.c
(+173 files in other folders)
